Completed initial Unit Testing

--- a/food_ordering_app/.vscode/settings.json
+++ b/food_ordering_app/.vscode/settings.json
@@ -23,6 +23,7 @@
     "auth/LICENSE": true,
     "auth/analysis_options.yaml": true,
     "auth/auth.iml": true,
-    "auth/pubspec.lock": true
+    "auth/pubspec.lock": true,
+    ".vscode": true
   }
 }
