--- a/food_ordering_app/auth/pubspec.yaml
+++ b/food_ordering_app/auth/pubspec.yaml
@@ -11,11 +11,13 @@ dependencies:
   flutter:
     sdk: flutter
   google_sign_in: ^5.4.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  mocktail: ^0.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
