--- a/food_ordering_backend/package.json
+++ b/food_ordering_backend/package.json
@@ -9,18 +9,28 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.3",
     "@types/chai-as-promised": "^7.1.5",
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mocha": "^10.0.0",
     "@types/mongoose": "^5.11.97",
+    "@types/supertest": "^2.0.12",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "mocha": "^10.1.0",
+    "supertest": "^6.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-validator": "^6.14.2",
+    "express-validators": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1"
   }
 }
