Refactor and Test API

--- a/food_ordering_backend/package.json
+++ b/food_ordering_backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev" : "ts-node ./src/app.ts",
     "test": "mocha --require ts-node/register --watch-extensions ts 'test/**/*.spec.ts' --timeout 10000"
   },
   "author": "",
