--- a/food_ordering_backend/package.json
+++ b/food_ordering_backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev" : "ts-node ./src/app.ts",
+    "dev": "ts-node ./src/app.ts",
     "test": "mocha --require ts-node/register --watch-extensions ts 'test/**/*.spec.ts' --timeout 10000"
   },
   "author": "",
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mocha": "^10.0.0",
     "@types/mongoose": "^5.11.97",
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.12",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
@@ -32,6 +33,7 @@
     "express-validator": "^6.14.2",
     "express-validators": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.1"
+    "mongoose": "^6.7.1",
+    "redis": "^4.5.0"
   }
 }
