--- a/foo_supabase/packages/user_repository/pubspec.yaml
+++ b/foo_supabase/packages/user_repository/pubspec.yaml
@@ -1,5 +1,5 @@
-name: supabase_database_client
-description: Supabase database client
+name: user_repository
+description: A package which manages the user domain.
 version: 0.1.0+1
 publish_to: none
 
@@ -11,12 +11,13 @@ dependencies:
   equatable: ^2.0.3
   flutter:
     sdk: flutter
-  json_annotation: ^4.7.0
-  json_serializable: ^6.5.4
+  supabase_auth_client:
+    path: ../supabase_auth_client
+  supabase_database_client:
+    path: ../supabase_database_client
   supabase_flutter: ^0.3.1
 
 dev_dependencies:
-  build_runner: ^2.1.11
   flutter_test:
     sdk: flutter
   mocktail: ^0.3.0
