--- a/foo_supabase/pubspec.yaml
+++ b/foo_supabase/pubspec.yaml
@@ -9,12 +9,28 @@ environment:
 
 dependencies:
   bloc: ^8.1.0
+  email_launcher:
+    path: packages/email_launcher
+  equatable: ^2.0.3
+  flow_builder: ^0.0.8
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.0.2
   flutter_bloc: ^8.1.1
   flutter_localizations:
     sdk: flutter
+  form_inputs:
+    path: packages/form_inputs
   intl: ^0.17.0
+  mockingjay: ^0.3.0
+  mocktail_image_network: ^0.3.1
+  supabase_auth_client:
+    path: packages/supabase_auth_client
+  supabase_database_client:
+    path: packages/supabase_database_client
+  supabase_flutter: ^0.3.0
+  user_repository:
+    path: packages/user_repository
 
 dev_dependencies:
   bloc_test: ^9.1.0
@@ -26,3 +42,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - assets/images/
+    - assets/.env
